--- a/styles.css
+++ b/styles.css
@@ -29,3 +29,14 @@ img {
     cursor: pointer;
     border-radius: 10px;
 }
+
+/* Image Highlight*/
+.grid a img {
+    transition: transform 0.3s ease, filter 0.3s ease;
+    cursor: pointer;
+}
+
+.grid a img:hover {
+    transform: scale(1.05);
+    filter: brightness(1.2);
+}
